@@ -94,6 +94,9 @@ Bug fixes
   when the reader is a near real-time reader.  (Jake Mannix via Mike
   McCandless)
 
+* LUCENE-1986: Fix NPE when scoring PayloadNearQuery (Peter Keegan,
+  Mark Miller via Mike McCandless)
+
 New features
 
 * LUCENE-1933: Provide a convenience AttributeFactory that creates a
